# projecteuler

./: .Jenkinsfile  .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  Makefile  Primes.cpp  Primes.py  README.md  boilermain.cpp  commit  dissassembly.e001.f90.s  e001  e001-unrolled.cpp  e001.cpp  e001.f90  e001.js  e001.md  e001.py  e001.s  e001module.f90  e002-recursive1.py  e002.cpp  e002.f90  e002.md  e002.out  e002.py  e002tmp.cpp  e003.cpp  e003.f90  e003.py  e004.cpp  e004.f90  e004.py  e005.f90  e005.py  e006.f90  e006.py  e007.py  e008.py  (+81 more)
GameOfLife/: LTimer.h  Makefile  game_of_life_c.h  game_of_life_cpp.h  main_cli.cpp  main_fltk.cpp  main_sdl.cpp
cmake/: FindGMP.cmake
dev/: cpp.e001.s  e002.f90  e014.py  e027.py  e034.py  e038.py  e039.py  e043.py  e044.py  e060.py  e083.py
metastuff/: auto_test.cpp  boilerplate.s  helloworld.c  helloworld_rflx.cpp  iofile.f90  primehelpersmodule.cpp  primehelpersmodule.h  primehelpersmodule_boost_python.cpp  referencetest.cpp  statictest.cpp
metastuff/io/: testtext.txt
metastuff/maketest/: Makefile  script1.py  script2.py
metastuff/moduletest/: a.py  b.py
